corrected html final project module_01

--- a/index.html
+++ b/index.html
@@ -9,32 +9,34 @@
 </head>
 
 <body>
-    <h1><b>Структурирование контента в HTML: как не перепутать
-            <code>
+    <article>
+        <h1><b>Структурирование контента в HTML: как не перепутать
+                <code>
                 &lt;div&gt;, &lt;section&gt;, &lt;article&gt; и &lt;aside&gt;?
             </code>
-        </b>
-    </h1>
-    <section>
-        <p>
-            Ещё одна причина любить и уважать HTML5 — его громадный вклад в семантику кода. То есть, код теперь имеет
-            осмысленную и логичную структуру. Для этого введены специальные теги, которые служат удобным инструментом
-            создания понятной и легко читаемой структуры в коде.
-        </p>
-        <p>
-            Среди прочих стоит выделить теги &lt;section&gt;, &lt;article&gt; и &lt;aside&gt;. Именно они делают блок с
-            контентом более
-            значимым и обособленным, чем привычный &lt;div&gt;. Часто не до конца ясно, когда использовать эти
-            новые элементы, а когда обычный &lt;div&gt;. Что ж, давайте начнём с обзора упомянутых элементов,
-            а затем уже поговорим об их применении и комбинировании.
-        </p>
-    </section>
-    <section>
-        <h2><b>Обзор элементов</b></h2>
-
-        <article>
-            <h3><b>&lt;div&gt;</b></h3>
+            </b>
+        </h1>
+        <section>
+            <p>
+                Ещё одна причина любить и уважать HTML5 — его громадный вклад в семантику кода. То есть, код теперь
+                имеет
+                осмысленную и логичную структуру. Для этого введены специальные теги, которые служат удобным
+                инструментом
+                создания понятной и легко читаемой структуры в коде.
+            </p>
+            <p>
+                Среди прочих стоит выделить теги &lt;section&gt;, &lt;article&gt; и &lt;aside&gt;. Именно они делают
+                блок с
+                контентом более
+                значимым и обособленным, чем привычный &lt;div&gt;. Часто не до конца ясно, когда использовать эти
+                новые элементы, а когда обычный &lt;div&gt;. Что ж, давайте начнём с обзора упомянутых элементов,
+                а затем уже поговорим об их применении и комбинировании.
+            </p>
+        </section>
+        <section>
+            <h2><b>Обзор элементов</b></h2>
             <section>
+                <h3><b>&lt;div&gt;</b></h3>
                 <p>
                     Элемент &lt;div&gt; является, пожалуй, самым универсальным блочным элементом. При этом у него нет
                     полноценного самостоятельного значения — он предназначен для группировки контента, который
@@ -52,11 +54,8 @@
                     <img src="image/div.jpg" alt="Отрывок кода, с использованием div-контейнера">
                 </figure>
             </section>
-        </article>
-
-        <article>
-            <h3><b>&lt;section&gt;</b></h3>
             <section>
+                <h3><b>&lt;section&gt;</b></h3>
                 <p>
                     В отличие от &lt;div&gt;, тег &lt;section&gt; применяется к общим разделам контента, который может
                     быть
@@ -75,11 +74,8 @@
                     <img src="image/section.jpg" alt="Отрывок кода, с использованием тега-контейнера section">
                 </figure>
             </section>
-        </article>
-
-        <article>
-            <h3><b>&lt;article&gt;</b></h3>
             <section>
+                <h3><b>&lt;article&gt;</b></h3>
                 <p>
                     Тег &lt;article&gt; ещё более уточняющий и конкретный, чем тег &lt;section&gt;. Он так же
                     применяется к семантически связанному блоку контента и должен иметь заголовок. Его содержимое должно
@@ -95,11 +91,8 @@
                     <img src="image/article.jpg" alt="Отрывок кода с использованием тега article">
                 </figure>
             </section>
-        </article>
-
-        <article>
-            <h3><b>&lt;aside&gt;</b></h3>
             <section>
+                <h3><b>&lt;aside&gt;</b></h3>
                 <p>
                     Тег &lt;aside&gt; тоже применяется к блоку для семантического указания раздела. Но у него есть
                     важное отличие от &lt;section&gt; или &lt;article&gt;: он представляет блок контента, отношение
@@ -117,58 +110,56 @@
                     <img src="image/aside.jpg" alt="Отрывок кода с использованием тега aside">
                 </figure>
             </section>
-        </article>
-    </section>
-    <section>
-        <h2>
-            <b>Применение
-                <code>
+        </section>
+        <section>
+            <h2>
+                <b>Применение
+                    <code>
                     &lt;div&gt;, &lt;section&gt;, &lt;article&gt; и &lt;aside&gt;
                 </code>
-            </b>
-        </h2>
-        <p>
-            Принимая во внимание особенности элементов, которые мы рассмотрели выше, получаем простой алгоритм для
-            определения нужного тега в каждой ситуации:
-        </p>
-        <ul>
-            <li>
-                если контент не является семантически связанным — используется &lt;div&gt;.
-            </li>
-            <li>
-                если контент семантически связан и относительно независим от остального содержимого страницы —
-                используется &lt;article&gt;.
-            </li>
-            <li>
-                если контент связан с содержимым всей страницы — используется &lt;section&gt;.
-            </li>
-            <li>
-                тег &lt;aside&gt;, как было замечено выше, используется для обособления контента, который связан по
-                смыслу между собой, но при этом не связан (слабо связан) с остальным содержимым страницы.
-            </li>
-        </ul>
-        <figure style="margin: 0;">
-            <figcaption>
-                Для простоты восприятия проиллюстрируем всё это графически:
-            </figcaption>
-            <img src="image/illustration.jpg" alt="Схема выбора использования тегов- div, aside, section, article">
-        </figure>
-    </section>
-    <section>
-        <h2>
-            <b>
-                Комбинирование элементов
-            </b>
-        </h2>
+                </b>
+            </h2>
+            <p>
+                Принимая во внимание особенности элементов, которые мы рассмотрели выше, получаем простой алгоритм для
+                определения нужного тега в каждой ситуации:
+            </p>
+            <ul>
+                <li>
+                    если контент не является семантически связанным — используется &lt;div&gt;.
+                </li>
+                <li>
+                    если контент семантически связан и относительно независим от остального содержимого страницы —
+                    используется &lt;article&gt;.
+                </li>
+                <li>
+                    если контент связан с содержимым всей страницы — используется &lt;section&gt;.
+                </li>
+                <li>
+                    тег &lt;aside&gt;, как было замечено выше, используется для обособления контента, который связан по
+                    смыслу между собой, но при этом не связан (слабо связан) с остальным содержимым страницы.
+                </li>
+            </ul>
+            <figure style="margin: 0;">
+                <figcaption>
+                    Для простоты восприятия проиллюстрируем всё это графически:
+                </figcaption>
+                <img src="image/illustration.jpg" alt="Схема выбора использования тегов- div, aside, section, article">
+            </figure>
+        </section>
         <section>
-            <p>Теперь рассмотрим ключевые особенности объединения этих элементов вместе.</p>
-            <article>
-                <h3>
-                    <b>
-                        &lt;article&gt; в &lt;article&gt;
-                    </b>
-                </h3>
+            <h2>
+                <b>
+                    Комбинирование элементов
+                </b>
+            </h2>
+            <section>
+                <p>Теперь рассмотрим ключевые особенности объединения этих элементов вместе.</p>
                 <section>
+                    <h3>
+                        <b>
+                            &lt;article&gt; в &lt;article&gt;
+                        </b>
+                    </h3>
                     <p>
                         Элементы &lt;article&gt; можно вкладывать друг в друга. При этом они по-прежнему остаются
                         самодостаточными. Предполагается, однако, что содержимое внутреннего &lt;article&gt; связано с
@@ -183,14 +174,12 @@
                             alt="Отрывок кода с использованием тега-контейнера article для article">
                     </figure>
                 </section>
-            </article>
-            <article>
-                <h3>
-                    <b>
-                        &lt;article&gt; в &lt;section&gt;
-                    </b>
-                </h3>
                 <section>
+                    <h3>
+                        <b>
+                            &lt;article&gt; в &lt;section&gt;
+                        </b>
+                    </h3>
                     <p>
                         Подобным образом несколько тегов &lt;article&gt; можно «обернуть» в &lt;section&gt;.
                     </p>
@@ -200,34 +189,35 @@
                             Контейнером для всех постов будет тег &lt;section&gt;, а каждый такой пост обособляется
                             тегом &lt;article&gt;:
                         </figcaption>
-                        <img src="image/article_section.jpg" alt="Блок кода с использованием контейнера article для section">
+                        <img src="image/article_section.jpg"
+                            alt="Блок кода с использованием контейнера article для section">
                     </figure>
                 </section>
-            </article>    
-            <article>
-                <h3>
-                    <b>
-                        &lt;section&gt; в &lt;article&gt;
-                    </b>
-                </h3>
                 <section>
+                    <h3>
+                        <b>
+                            &lt;section&gt; в &lt;article&gt;
+                        </b>
+                    </h3>
                     <p>
-                        Возможен и обратный вариант, когда каждый тег &lt;article&gt; может иметь один или даже несколько тегов &lt;section&gt;.
+                        Возможен и обратный вариант, когда каждый тег &lt;article&gt; может иметь один или даже
+                        несколько тегов &lt;section&gt;.
                     </p>
                     <figure style="margin: 0;">
                         <figcaption>
                             Например, эта статья, если была бы частью страницы, могла бы быть размечена так:
                         </figcaption>
-                        <img src="image/section_article.jpg" alt="Блок кода с использованием контейнера section для article">
+                        <img src="image/section_article.jpg"
+                            alt="Блок кода с использованием контейнера section для article">
                     </figure>
                 </section>
-            </article>
+            </section>
         </section>
-    </section>
-<p>
-    Вот и всё! Надеемся, эта статья поможет вам безошибочно определять правильное место для каждого структурирующего тега в HTML5.
-</p>
-
+        <p>
+            Вот и всё! Надеемся, эта статья поможет вам безошибочно определять правильное место для каждого
+            структурирующего тега в HTML5.
+        </p>
+    </article>
 </body>
 
 </html>
