fix semantics bugs final project module_01

--- a/index.html
+++ b/index.html
@@ -10,33 +10,28 @@
 
 <body>
     <article>
-        <h1><b>Структурирование контента в HTML: как не перепутать
-                <code>
-                &lt;div&gt;, &lt;section&gt;, &lt;article&gt; и &lt;aside&gt;?
-            </code>
-            </b>
+        <h1>Структурирование контента в HTML: как не перепутать &lt;div&gt;, &lt;section&gt;, &lt;article&gt; и
+            &lt;aside&gt;?
         </h1>
+        <p>
+            Ещё одна причина любить и уважать HTML5 — его громадный вклад в семантику кода. То есть, код теперь
+            имеет
+            осмысленную и логичную структуру. Для этого введены специальные теги, которые служат удобным
+            инструментом
+            создания понятной и легко читаемой структуры в коде.
+        </p>
+        <p>
+            Среди прочих стоит выделить теги &lt;section&gt;, &lt;article&gt; и &lt;aside&gt;. Именно они делают
+            блок с
+            контентом более
+            значимым и обособленным, чем привычный &lt;div&gt;. Часто не до конца ясно, когда использовать эти
+            новые элементы, а когда обычный &lt;div&gt;. Что ж, давайте начнём с обзора упомянутых элементов,
+            а затем уже поговорим об их применении и комбинировании.
+        </p>
         <section>
-            <p>
-                Ещё одна причина любить и уважать HTML5 — его громадный вклад в семантику кода. То есть, код теперь
-                имеет
-                осмысленную и логичную структуру. Для этого введены специальные теги, которые служат удобным
-                инструментом
-                создания понятной и легко читаемой структуры в коде.
-            </p>
-            <p>
-                Среди прочих стоит выделить теги &lt;section&gt;, &lt;article&gt; и &lt;aside&gt;. Именно они делают
-                блок с
-                контентом более
-                значимым и обособленным, чем привычный &lt;div&gt;. Часто не до конца ясно, когда использовать эти
-                новые элементы, а когда обычный &lt;div&gt;. Что ж, давайте начнём с обзора упомянутых элементов,
-                а затем уже поговорим об их применении и комбинировании.
-            </p>
-        </section>
-        <section>
-            <h2><b>Обзор элементов</b></h2>
+            <h2>Обзор элементов</h2>
             <section>
-                <h3><b>&lt;div&gt;</b></h3>
+                <h3>&lt;div&gt;</h3>
                 <p>
                     Элемент &lt;div&gt; является, пожалуй, самым универсальным блочным элементом. При этом у него нет
                     полноценного самостоятельного значения — он предназначен для группировки контента, который
@@ -55,7 +50,7 @@
                 </figure>
             </section>
             <section>
-                <h3><b>&lt;section&gt;</b></h3>
+                <h3>&lt;section&gt;</h3>
                 <p>
                     В отличие от &lt;div&gt;, тег &lt;section&gt; применяется к общим разделам контента, который может
                     быть
@@ -75,7 +70,7 @@
                 </figure>
             </section>
             <section>
-                <h3><b>&lt;article&gt;</b></h3>
+                <h3>&lt;article&gt;</h3>
                 <p>
                     Тег &lt;article&gt; ещё более уточняющий и конкретный, чем тег &lt;section&gt;. Он так же
                     применяется к семантически связанному блоку контента и должен иметь заголовок. Его содержимое должно
@@ -92,7 +87,7 @@
                 </figure>
             </section>
             <section>
-                <h3><b>&lt;aside&gt;</b></h3>
+                <h3>&lt;aside&gt;</h3>
                 <p>
                     Тег &lt;aside&gt; тоже применяется к блоку для семантического указания раздела. Но у него есть
                     важное отличие от &lt;section&gt; или &lt;article&gt;: он представляет блок контента, отношение
@@ -113,11 +108,7 @@
         </section>
         <section>
             <h2>
-                <b>Применение
-                    <code>
-                    &lt;div&gt;, &lt;section&gt;, &lt;article&gt; и &lt;aside&gt;
-                </code>
-                </b>
+                Применение &lt;div&gt;, &lt;section&gt;, &lt;article&gt; и &lt;aside&gt;
             </h2>
             <p>
                 Принимая во внимание особенности элементов, которые мы рассмотрели выше, получаем простой алгоритм для
@@ -148,17 +139,13 @@
         </section>
         <section>
             <h2>
-                <b>
-                    Комбинирование элементов
-                </b>
+                Комбинирование элементов
             </h2>
             <section>
                 <p>Теперь рассмотрим ключевые особенности объединения этих элементов вместе.</p>
                 <section>
                     <h3>
-                        <b>
-                            &lt;article&gt; в &lt;article&gt;
-                        </b>
+                        &lt;article&gt; в &lt;article&gt;
                     </h3>
                     <p>
                         Элементы &lt;article&gt; можно вкладывать друг в друга. При этом они по-прежнему остаются
@@ -176,9 +163,7 @@
                 </section>
                 <section>
                     <h3>
-                        <b>
-                            &lt;article&gt; в &lt;section&gt;
-                        </b>
+                        &lt;article&gt; в &lt;section&gt;
                     </h3>
                     <p>
                         Подобным образом несколько тегов &lt;article&gt; можно «обернуть» в &lt;section&gt;.
@@ -195,9 +180,7 @@
                 </section>
                 <section>
                     <h3>
-                        <b>
-                            &lt;section&gt; в &lt;article&gt;
-                        </b>
+                        &lt;section&gt; в &lt;article&gt;
                     </h3>
                     <p>
                         Возможен и обратный вариант, когда каждый тег &lt;article&gt; может иметь один или даже
